--- a/src/components/SectionCard/TitleSection.module.css
+++ b/src/components/SectionCard/TitleSection.module.css
@@ -2,6 +2,7 @@
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
     font-weight: normal;
     font-size: 1.5em;
+    padding-left: 10px;
 }
 
 .title > a {
