--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,7 +1,29 @@
-.main {
-    height: 100%;
+body {
     background: #ebebeb;
-    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-areas: 
+        "header header header"
+        "aside main main"
+        "footer footer footer";
+}
+
+header {
+    grid-area: header;
+}
+
+main {
+    grid-area: main;
+
+}
+
+aside {
+    grid-area: aside;
+    background: #000;
+}
+
+footer {
+    grid-area: footer;
 }
 
 .container {
