--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -101,6 +101,8 @@ body {margin: 0; padding: 0;}
     padding: 0;
     margin: 0;
     list-style: none;
+    text-decoration: none;
+    color: #202020;
 }
 
 .location > a > span:first-of-type {
