--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -1,12 +1,23 @@
-.aside h4 {
+.aside {
+    font-family: "Proxima Nova",Arial,sans-serif,sans-serif; 
+    background: #fff;
+    height: fit-content;
+    margin: 5rem 0 0 3rem;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #0002;
     color: #525252;
-    font-family: sans-serif;
-    margin: 0.5rem;
-    text-align: center;
-    font-size: 0.875rem;
+}
+
+.aside h4 {
+    width: 100%;
+    justify-self: center;
     background-color: #e5e7eb;
-    border-radius: 0.125rem;
-    border: 1px solid #000;
+    padding: 2px 5px;
+    text-align: center;
+    font-size: 0.9rem;
+    border-radius: 5px;
+    border: 2px solid #52525233;
 }
 
 .aside p {
@@ -17,7 +28,119 @@
     color: #737373;
     width: fit-content;
     margin-bottom: 0.25rem;
-    padding-left: 0.25rem;
     padding-right: 0.25rem;
-    margin-left: 0.5rem;
+}
+
+.aside ul {
+    list-style: none;
+    padding: 8px;
+    background: #e5e7eb55;
+    border: 1px solid #52525233;
+    border-radius: 5px
+}
+.aside ul li {
+    font-size: 0.8rem;
+    padding-bottom: 3px;
+}
+
+.aside ul li:hover {
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
+
+/* Remove Filter -------------------- */
+.removeFilter {
+    display: flex;
+    justify-content: space-between;
+    justify-self: start;
+    width: 100%;
+    height: fit-content;
+    color: #525252;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #52525233;
+    background-color: #e5e7eb;
+    transition: background-color 0.2s ease, color 0.2s ease;
+    margin-top: 10px;
+}
+.removeFilter svg {
+    height: 15px;
+}
+.removeFilter span {
+    align-self: center;
+    font-size: 0.8rem;
+}
+.removeFilter:hover {
+    background-color: #d4d4d4;
+    color: #525252; 
+}
+
+/* Price Min Max -------------------- */
+
+.priceMinMax {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px ;
+}
+
+.priceMinMax input {
+    width: 35%;
+}
+
+/* Chrome, Safari, Edge */
+.priceMinMax input[type=number]::-webkit-inner-spin-button,
+.priceMinMax input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.notAllowed {
+    border-radius: 50%;
+    border: none;
+    cursor: not-allowed;
+}
+
+.allowed {
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    background: #1447e6ee;
+}
+
+
+
+.priceMinMax svg {
+    height: 20px;
+}
+
+
+
+
+/* Reset Filters -------------------- */
+.resetFilters {
+    display: flex;
+    justify-content: space-between;
+    justify-self: center;
+    width: 65%;
+    height: fit-content;
+    color: #525252;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #52525233;
+    background-color: #fff;
+    transition: background-color 0.2s ease, color 0.2s ease;
+    margin-top: 15px;
+}
+.resetFilters svg {
+    height: 20px;
+}
+.resetFilters span {
+    align-self: center;
+    font-size: 0.8rem;
+}
+.resetFilters:hover {
+    background-color: #d4d4d4;
+    color: #525252; 
+    border: none;
 }
