--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-html {margin: 0; padding: 0;}
+html {margin: 0; padding: 0; font-family: "Proxima Nova",Arial,sans-serif,sans-serif; }
 body {margin: 0; padding: 0;}
 
 .header {
@@ -189,6 +189,7 @@ body {margin: 0; padding: 0;}
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
+    z-index: 10;
 }
 
 .buttonCategories:hover .dropdownCategories {
