--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -2,11 +2,13 @@
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif; 
     background: #fff;
     height: fit-content;
+    min-width: 100px;
     margin: 5rem 0 0 3rem;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 1px 1px 10px #0002;
     color: #525252;
+    container: aside / inline-size;
 }
 
 .aside h4 {
@@ -85,7 +87,13 @@
 }
 
 .priceMinMax input {
-    width: 35%;
+    width: 30%;
+    padding-left: 5px;
+    color: #525252;
+    border-radius: 5px;
+    border: none;
+    border-left: 1px solid #0005;
+    border-bottom: 1px solid #0005;
 }
 
 /* Chrome, Safari, Edge */
@@ -108,10 +116,8 @@
     background: #1447e6ee;
 }
 
-
-
-.priceMinMax svg {
-    height: 20px;
+.priceMinMax button {
+    width: 35px
 }
 
 
@@ -120,9 +126,9 @@
 /* Reset Filters -------------------- */
 .resetFilters {
     display: flex;
-    justify-content: space-between;
     justify-self: center;
-    width: 65%;
+    width: fit-content;
+    justify-content: center;
     height: fit-content;
     color: #525252;
     cursor: pointer;
@@ -144,3 +150,23 @@
     color: #525252; 
     border: none;
 }
+
+
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+
+    @container aside (width <= 165px) {
+        .priceMinMax {
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .priceMinMax input {
+            width: 90%;
+            height: 20px;
+        }
+
+        .notAllowed,
+        .allowed {
+            align-self: center;
+        }
+    }
