--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    justify-self: center;
     background: #fff;
     padding: 5px 10px 30px 10px;
     min-width: 180px;
@@ -94,8 +95,10 @@
 
 /* ------------------ PHONE SCREEN VIEW -------------------------*/
 
-        @media (max-width: 500px) {
+        @media (max-width: 650px) {
             .container {
                 max-width: none;
+                min-width: none;
+                width: 100%;
             }
         }   
