--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -1,5 +1,8 @@
 .cart {
     height: 100%;
+    background: #ebebeb;
+    font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
+    color: #202020;
 }
 
 .cart main {
@@ -14,5 +17,125 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     max-width: 1210px;
-    background: #000;
+    gap: 5vw;
+}
+
+.productInCart {
+    grid-column: span 2;
+}
+
+.productInCart > h1 {
+    background: #fff;
+    font-size: 1.2rem;
+    font-weight: lighter;
+    letter-spacing: 0.5px;
+    border-radius: 10px;
+    padding: 20px 0 20px 30px;
+    margin: 0;
+    text-justify: center;
+}
+
+/* TOTAL PRICE CART --------------------------------------------------------- */
+.totalPriceCart {
+    background: #fff;
+    padding: 24px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 10px;
+    max-height: 300px;
+    min-width: 250px;
+}
+
+.totalPriceCart > h3 {
+    margin: 0;
+    padding: 0 0 16px 24px;
+    border-bottom: 1px solid #20202055;
+    font-size: 1.1rem;
+    font-weight: 100;
+}
+
+.infoPrice {
+    padding: 0 24px;
+    color: #202020AA;
+}
+
+.infoPrice span {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.9rem;
+}
+
+.infoPrice span:nth-child(2){
+    margin-top: 10px;
+}
+
+.infoPrice span:last-child{
+    color: #000;
+    margin-top: 30px;
+    font-size: 1rem;
+}
+
+.infoPrice span p {
+    margin: 0;
+}
+
+/* BUTTONS ------------------------------------------------------- */
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.buttonComprar {
+    display: flex;
+    justify-content: center;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    text-decoration: none;
+}
+.buttonComprar button {
+    background-color: #3b82f6;
+    color: white;
+    margin-top: 1rem;
+    width: 100%;
+    min-height: 30px;
+    height: 3vw;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: none;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    margin: 0;
+}
+.buttonComprar button:hover {
+    background-color: #1d4ed8;
+}
+
+
+.buttonVolver {
+    display: flex;
+    justify-content: center;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    text-decoration: none;
+}
+.buttonVolver button {
+    background-color: #e5e7eb;
+    color: #374151;
+    margin-top: 1rem;
+    width: 100%;
+    min-height: 30px;
+    height: 3vw;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: none;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    margin: 0;
+}
+.buttonVolver button:hover {
+    background-color: #d1d5db;
 }
