--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,4 +1,4 @@
-.body {
+.home {
     background: #ebebeb;
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
@@ -7,7 +7,8 @@
     "main main main"
     "footer footer footer";
 }
-.body2 {
+
+.homeAside {
     background: #ebebeb;
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
