--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -10,7 +10,10 @@
     padding: 5px 10px 30px 10px;
     min-width: 180px;
     max-width: 200px;
-    
+}
+
+.container a {
+    text-decoration: none;
 }
 
 .imgContent{
@@ -22,24 +25,25 @@
     max-width: 150px;
 }
 
-.container > h3 {
+.container > a > h3 {
     font-weight: lighter;
-    color: #222;
+    color: #404040;
     font-size: 1.8em;
 }
 
 .previousPrice{
-    color: #5f5f5f;
+    color: #737373;
     font-size: 1.5em;
-    text-decoration: line-through solid #5f5f5f 2px;
+    text-decoration: line-through solid #5f5f5f 1px;
     margin: 0;
-    padding: 0;
+    padding: 5px 0 0 0;
 }
 
-.container > h4 {
+.container > a > h4 {
     font-size: 2em;
     margin: 0;
     padding: 0;
+    color: #000;
 }
 
 .priceInfo {
