--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -2,23 +2,25 @@
 
 .inputSearch{
     width: 100%;
-    height: 80%;
+    height: 70%;
     background: #fff;
     border: none;
     margin-left: 10px;
     font-size: 100%;
+
 }
 
 .buttonSearch{
-    height: 80%;
+    height: 70%;
     background: #fff;
     border: none;
-    border-left: 1px solid #0002;
     cursor: pointer;
+    border-left: 1px solid #0002;
 }
 
 .buttonSearch > img {
-    height: 100%;
+    height: 80%;
+    margin: 0 5px;
 }
 
 
