--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -1,12 +1,12 @@
 .cart {
-    height: 100%;
+    min-height: 100vh;
     background: #ebebeb;
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
     color: #202020;
 }
 
 .cart main {
-    height: 100vh;
+    height: fit-content;
     padding-top: 80px;
     display: flex;
     justify-content: center;
@@ -22,6 +22,7 @@
 
 .productInCart {
     grid-column: span 2;
+    min-width: 240px;
 }
 
 .productInCart > h1 {
@@ -33,6 +34,32 @@
     padding: 20px 0 20px 30px;
     margin: 0;
     text-justify: center;
+    box-shadow: 2px 2px 5px #0003;
+
+}
+
+.emptyCart {
+    justify-self: end;
+}
+
+.emptyCart > button {
+    background-color: #e5e7eb;
+    color: #374151;
+    margin: 1rem 0;
+    min-height: 30px;
+    height: 3vw;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: 1px solid #0001;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px #0003;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    padding: 0 15px;
+}
+
+.emptyCart > button:hover {
+    background-color: #d1d5db;
 }
 
 /* TOTAL PRICE CART --------------------------------------------------------- */
@@ -44,19 +71,20 @@
     justify-content: space-between;
     border-radius: 10px;
     max-height: 300px;
-    min-width: 250px;
+    box-shadow: 2px 2px 5px #0003;
+    container: totalPriceCart;
 }
 
 .totalPriceCart > h3 {
     margin: 0;
-    padding: 0 0 16px 24px;
-    border-bottom: 1px solid #20202055;
+    padding: 0 24px 16px 24px;
+    border-bottom: 1px solid #ebe6e7;
     font-size: 1.1rem;
     font-weight: 100;
 }
 
 .infoPrice {
-    padding: 0 24px;
+    padding: 16px 24px;
     color: #202020AA;
 }
 
@@ -100,7 +128,7 @@
     margin-top: 1rem;
     width: 100%;
     min-height: 30px;
-    height: 3vw;
+    height: fit-content;
     border-radius: 0.375rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -112,7 +140,6 @@
 .buttonComprar button:hover {
     background-color: #1d4ed8;
 }
-
 
 .buttonVolver {
     display: flex;
@@ -127,7 +154,7 @@
     margin-top: 1rem;
     width: 100%;
     min-height: 30px;
-    height: 3vw;
+    height: fit-content;
     border-radius: 0.375rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -139,3 +166,16 @@
 .buttonVolver button:hover {
     background-color: #d1d5db;
 }
+
+
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+    @media (max-width: 768px) {
+        
+            .cart main > div {
+            width: 90vw;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            max-width: 1210px;
+            gap: 5vw;
+        }
+    }
