--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -10,6 +10,7 @@
     padding: 5px 10px 30px 10px;
     min-width: 180px;
     max-width: 200px;
+    margin-top: 10px;
 }
 
 .container a {
@@ -104,5 +105,8 @@
                 max-width: none;
                 min-width: none;
                 width: 100%;
+            }
+            .container a {
+                align-self: center;
             }
         }   
