--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -3,7 +3,7 @@
     background: #fff;
     height: fit-content;
     min-width: 100px;
-    margin: 5rem 0 0 3rem;
+    max-width: 180px;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 1px 1px 10px #0002;
