--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -19,9 +19,10 @@
 
 .imgContent{
     height: 150px;
+    justify-self: center;
 }
 .imgContent > img {
-    width: 80%;
+    height: 100%;
     min-width: 100px;
     max-width: 150px;
 }
