--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,5 +1,3 @@
-
-
 .inputSearch{
     width: 100%;
     height: 70%;
@@ -7,7 +5,7 @@
     border: none;
     margin-left: 10px;
     font-size: 100%;
-
+    position: relative;
 }
 
 .buttonSearch{
@@ -23,14 +21,61 @@
     margin: 0 5px;
 }
 
+/* Search Result ----------------------------------------------- */
+
+.searchResult {
+    position: absolute;
+    top: 50px;
+    z-index: 5;
+    height: fit-content;
+    width: 40vw;
+    display: grid;
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(156, 163, 175, 0.4);
+    padding: 10px 0;
+}
+
+.searchResult > a {
+    display: flex;
+    cursor: pointer;
+    height: 40px;
+    text-decoration: none;
+    color: #202020;
+    align-items: center;
+}
+
+.searchResult > a:hover {
+    background-color: #3b82f6;
+    color: #fff;
+}
+
+.searchResult img {
+    height: 60%;
+    padding: 0 8px;
+    border-left: 1px solid #d1d5db;
+}
+
+.searchResult p {
+    font-size: 0.9em;
+    justify-items: center;
+    margin: 0;
+}
+
+
 
 /* ------------------ PHONE SCREEN VIEW -------------------------*/
-    @media (max-width: 768px) {
-        .buttonSearch{
-            height: 50%;
-            width: 12%;
-            background: #fff;
-            border: none;
-            border-right: 1px solid #0002;
-        }
+@media (max-width: 768px) {
+    .buttonSearch{
+        height: 50%;
+        width: 12%;
+        background: #fff;
+        border: none;
+        border-right: 1px solid #0002;
     }
+
+    .searchResult {
+    left: 18vw;
+    top: 45px;
+    width: 55vw;
+}
+}
