--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -71,6 +71,7 @@
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
     background: #fff;
     border-radius: 2px;
+    position: relative;
 }
 
 /* Advertising --------------------------------- */
