--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -5,7 +5,6 @@
     border: none;
     margin-left: 10px;
     font-size: 100%;
-    position: relative;
 }
 
 .buttonSearch{
@@ -25,14 +24,14 @@
 
 .searchResult {
     position: absolute;
-    top: 50px;
+    top: 100%;
     z-index: 5;
     height: fit-content;
-    width: 40vw;
     display: grid;
     background-color: #fff;
     box-shadow: 0 1px 3px rgba(156, 163, 175, 0.4);
     padding: 10px 0;
+    width: 100%;
 }
 
 .searchResult > a {
@@ -64,18 +63,12 @@
 
 
 /* ------------------ PHONE SCREEN VIEW -------------------------*/
-@media (max-width: 768px) {
-    .buttonSearch{
-        height: 50%;
-        width: 12%;
-        background: #fff;
-        border: none;
-        border-right: 1px solid #0002;
+    @media (max-width: 768px) {
+        .buttonSearch{
+            height: 50%;
+            width: 12%;
+            background: #fff;
+            border: none;
+            border-right: 1px solid #0002;
+        }
     }
-
-    .searchResult {
-    left: 18vw;
-    top: 45px;
-    width: 55vw;
-}
-}
