--- a/src/components/SimpleHeader/SimpleHeader.module.css
+++ b/src/components/SimpleHeader/SimpleHeader.module.css
@@ -32,3 +32,10 @@
     color: #202020;
     align-self: center;
 }
+
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+    @media (max-width: 768px) {
+        .header > div {
+            width: 90%;
+        }
+    }
