--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -70,4 +70,9 @@ footer {
     border: none;
 }
 
-
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
+    @media (min-width: 1475px) {
+        .buttonFilter {
+            right: 50%;
+        }
+    }
