--- a/src/components/SectionCard/TitleSection.module.css
+++ b/src/components/SectionCard/TitleSection.module.css
@@ -2,17 +2,18 @@
     font-family: "Proxima Nova",Arial,sans-serif,sans-serif;
     font-weight: normal;
     font-size: 1.5em;
-    padding-left: 10px;
+    padding-left: 25px;
+    margin: 25px 0;
 }
 
 .title > a {
     text-decoration: none;
     color: #2b7fff;
     font-size: 0.7em;
-    padding-left: 0.4em;
+    padding-left: 0.8em;
 }
 
-
+/* ------------------ PHONE SCREEN VIEW -------------------------*/
     @media (max-width: 768px) {
         .title{
             display: flex;
