--- a/src/pages/PublishProductForm/PublishProductForm.module.css
+++ b/src/pages/PublishProductForm/PublishProductForm.module.css
@@ -101,6 +101,23 @@
     background-color: #1d4ed8;
 }
 
+.returnButton {
+    background-color: #e5e7eb;
+    color: #374151;
+    width: 100%;
+    min-height: 30px;
+    height: 50px;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: none;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+}
+.returnButton:hover {
+    background-color: #d1d5db;
+}
+
 /* ------------------ PHONE SCREEN VIEW -------------------------*/
 @media (max-width: 768px) {
     .publishProductForm > form {
